<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_language_setting"
            android:icon="@drawable/ic_settings"
            android:title="@string/language_setting" />
        <item
            android:id="@+id/nav_call_us"
            android:icon="@drawable/ic_phone"
            android:title="@string/call_us" />
        <item
            android:id="@+id/nav_facebook"
            android:icon="@drawable/ic_facebook"
            android:title="Facebook" />
        <item
            android:id="@+id/nav_twitter"
            android:icon="@drawable/ic_twitter"
            android:title="Twitter" />
        <item
            android:id="@+id/nav_linkedin"
            android:icon="@drawable/ic_linkedin"
            android:title="Linkedin" />
        <item
            android:id="@+id/nav_send_mail"
            android:icon="@drawable/ic_email"
            android:title="@string/send_mail" />
    </group>

</menu>
