<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".SendOrderForNursing" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:gravity="center"
            android:text="@string/nursing_service_header"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/prompting_to_type_name"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nursing_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/border_style"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/prompting_to_type_phone_number"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nursing_phone_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="220dp"
                android:layout_height="45dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/border_style"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/prompting_to_choose_area"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/nursing_cities_spinner"
            style="@style/spinner_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/prompting_to_type_address"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nursing_address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/border_style"
                android:gravity="top"
                android:inputType="textMultiLine|text" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/prompting_to_choose_patient_gender"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/nursing_patient_gender_spinner"
            style="@style/spinner_style"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/prompting_to_type_number_of_days"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nursing_number_of_days_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:layout_width="170dp"
                android:layout_height="45dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/border_style"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/nursing_submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/button_style"
            android:text="@string/submit_button"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>